package com.example.umc9th.domain.member.entity.mapping;

public class MemberTerm {
  
}
